--- a/src/template/dir.html
+++ b/src/template/dir.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 {{#each files}} <!--此句为对data中files遍历-->
-<a href="{{../dir}}/{{file}}">{{icon}}{{file}}</a>
+<a href="{{../dir}}/{{file}}">【{{icon}}】{{file}}</a>
 {{/each}}
 </body>
 </html>
